--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <a class="portfolio-link" href="http://pf.kakao.com/_mndVG/friend">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="rounded-circle img-fluid" src="assets/img/portfolio/1.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/1.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">상담사 심은주</div>
@@ -178,7 +178,7 @@
                             <a class="portfolio-link" data-bs-toggle="modal" href="#!">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="rounded-circle img-fluid" src="assets/img/portfolio/2.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/2.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">GroMind</div>
