--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#milestones">Milestones</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#core values">Core Values</a></li>
                         <li class="nav-item"><a class="nav-link" href="#join us">Join Us</a></li>
@@ -43,7 +43,7 @@
                 <div class="masthead-heading text-uppercase">Never Be Alone</div>
                 <div class="masthead-subheading">누구도 고립되지 않는 세상을 만들어갑니다</div>
                 <br />
-                <a class="btn btn-primary btn-xl text-uppercase" href="#about">Learn More</a>
+                <!-- <a class="btn btn-primary btn-xl text-uppercase" href="#about">Learn More</a> -->
             </div>
         </header>
         <!-- About-->
@@ -109,7 +109,7 @@
                 </ul>
             </div>
         </section>
-        <!-- Team-->
+        <!-- Team
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
@@ -149,7 +149,7 @@
                     <div class="col-lg-8 mx-auto text-center"><p class="large"> </p></div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="services">
             <div class="container">
