--- a/index.html
+++ b/index.html
@@ -159,20 +159,6 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 1-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" href="http://pf.kakao.com/_mndVG/friend">
-                                <div class="portfolio-hover">
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.png" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">상담사 심은주</div>
-                                <div class="portfolio-caption-subheading">카카오톡 챗봇</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#!">
@@ -301,7 +287,7 @@
                 <p>AILIKE.ME의 채용 과정은 <b>이력서 지원 - 전화 면접 - 대면 면접 - 최종 합격</b>으로 이루어집니다.<br /><b>최종 합격 이후 2달의 수습기간을 거쳐 fit을 맞춰보고 팀 내부 논의를 통해 팀원으로 합류하게 됩니다.</b><br /><b>지원을 원하시는 분은 아래 버튼을 눌러서 hrpark@ailike.me로 이력서와 지원 동기를 포함한 자유형식의 자기소개를 보내주시면 검토 후 연락 드리겠습니다.</b><br />지원에 대한 확신이 서지 않고 더 자세한 이야기를 들어봐야 결정 할 수 있겠다는 생각이 드시는 분도 이메일이나 010-2276-9752로 연락주시면 간단한 콜챗이나 커피챗이 가능하니 편하게 연락주세요.</p>
 
                 <div class="text-center">
-                    <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
+                    <!-- <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a> -->
                 </div>
             </div>
         </section>
