--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">BattleChat</div>
+                                <div class="portfolio-caption-heading">BattleChat: 좋은 대화</div>
                                 <div class="portfolio-caption-subheading">대화가 유일한 기준이 되는 곳</div>
                             </div>
                         </div>
