--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
                                 <div class="portfolio-caption-subheading">언제든지 만나는 나만의 숲속 고민 상담소</div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" href="https://check-your-chat-level.ailike.me/">
                                 <div class="portfolio-hover">
